# LiveActionAOV

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.bat  install.sh  launch.bat  pyproject.toml  uninstall.bat  uninstall.sh  update.bat  update.sh  utility_passes_claude_code_spec.md  utility_passes_design_notes.md
.github/workflows/: ci.yml  release.yml
docs/: PHASE0_SUMMARY.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  albedo-marigold.md  albedo-unividx.md  architecture.md  cryptomatte.md  developing-plugins.md  install.md  user-guide.md
scripts/: benchmark_refiner_weights.py  poc_unividx_prep.py  probe_crafter_apis.py  probe_matte_apis.py
src/live_action_aov/: __init__.py
src/live_action_aov/cli/: __init__.py  app.py  inspect.py
src/live_action_aov/core/: __init__.py  cancel.py  dag.py  job.py  logging_setup.py  pass_base.py  preflight.py  registry.py  runtime_env.py  vram.py
src/live_action_aov/executors/: __init__.py  base.py  deadline.py  local.py
src/live_action_aov/gui/: __init__.py  app.py  batch.py  cuda_check.py  inspector.py  log_panel.py  main_window.py  mask_preview.py  pass_catalog.py  preview_loader.py  session_io.py  shot_list.py  shot_state.py  submit_worker.py  viewport.py
src/live_action_aov/integrations/: __init__.py  base.py  openpype.py  prism.py  shotgrid.py  standalone.py
src/live_action_aov/io/: __init__.py  camera_schema.py  channels.py  colorspace_detect.py  cryptomatte.py  display_transform.py  metadata.py  ocio_color.py  oiio_io.py  resize.py
src/live_action_aov/io/readers/: __init__.py  base.py  display_transform_reader.py  oiio_exr.py  proxy.py
src/live_action_aov/io/writers/: __init__.py  base.py  exr.py  json.py  nuke_script.py
src/live_action_aov/models/: __init__.py  registry.py
src/live_action_aov/passes/: __init__.py
src/live_action_aov/passes/camera/: __init__.py  pycolmap_track.py  stub.py
src/live_action_aov/passes/depth/: __init__.py  depth_anything_v2.py  depthcrafter.py  depthpro.py  video_depth_anything.py
src/live_action_aov/passes/flow/: __init__.py  raft.py
src/live_action_aov/passes/intrinsic/: __init__.py  marigold.py  univid_x.py
src/live_action_aov/passes/matte/: __init__.py  birefnet.py  cryptomatte.py  matanyone2.py  rank.py  rvm.py  sam3.py  vitmatte.py
src/live_action_aov/passes/normals/: __init__.py  dsine.py  marigold_normals.py  normalcrafter.py
src/live_action_aov/plugins/nuke/UtilityRelight/: CLAUDE.md  LICENSE  README.md  UtilityRelightKernel.blink  utility_relight.py
src/live_action_aov/post/: __init__.py  position_from_depth.py  ssao.py  temporal_smooth.py
src/live_action_aov/shared/: __init__.py
src/live_action_aov/shared/optical_flow/: __init__.py  cache.py
src/live_action_aov/shared/video_clip/: __init__.py  sliding_window.py
tests/: conftest.py
tests/fixtures/: generate_test_plate.py
tests/support/: noop_pass.py
tests/test_cli/: test_cli_phase0.py  test_cli_phase2.py  test_cli_phase3.py  test_inspect.py  test_prefetch.py
tests/test_core/: test_cancel.py  test_dag.py  test_job_roundtrip.py  test_preflight.py  test_registry.py  test_runtime_env.py
tests/test_executors/: test_auto_smoother.py  test_cancel.py  test_matte_metadata.py  test_metric_depth_metadata.py  test_retry_io.py  test_vram_unload.py
tests/test_gui/: test_batch_continue_on_error.py  test_click_ui.py  test_cuda_check.py  test_preview_resize.py  test_session_io.py  test_submit_clicks.py  test_submit_concepts.py
tests/test_io/: test_camera_schema.py  test_channels.py  test_colorspace_detect.py  test_display_transform.py  test_dynamic_mask_channels.py  test_exr_delivery.py  test_nonfinite_sanitize.py  test_nuke_script_writer.py  test_ocio_log_colorspaces.py  test_oiio_roundtrip.py  test_resize.py
tests/test_passes/: test_birefnet_refiner.py  test_cryptomatte.py  test_depth_anything_v2.py  test_depthcrafter.py  test_depthpro.py  test_dsine.py  test_flow_raft.py  test_marigold.py  test_matanyone2_refiner.py  test_matte_integration_slow.py  test_matte_rank.py  test_noop_end_to_end.py  test_normalcrafter.py  test_pycolmap_camera.py  test_rvm_refiner.py  test_sam3_clicks.py  test_sam3_gated_error.py  test_sam3_hard_masks_schema.py  test_sam3_matte.py  test_univid_x_intrinsic.py  test_vitmatte_refiner.py
tests/test_post/: test_ssao.py  test_temporal_smooth.py
tests/test_shared/: test_flow_cache.py  test_sliding_window.py
