[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "live-action-aov"
version = "0.1.2"
description = "AI-driven VFX plate preprocessor: depth, normals, motion, mattes as sidecar EXRs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Leonardo Paolini", email = "LeonardoVFX@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
]

dependencies = [
    # Core
    "pydantic>=2.5",
    "typer>=0.12",
    "pyyaml>=6.0",
    "numpy>=1.26,<2.0",
    # I/O
    "oiio-python>=2.5",
    "opencolorio>=2.3",
    # Torch stack (CUDA 12.1 wheels)
    "torch>=2.3,<3.0",
    "torchvision>=0.18",
    # Model hub + transformers (DepthAnythingV2 ships via transformers pipeline)
    "huggingface-hub>=0.23",
    "transformers>=4.45",
    # GUI
    "PySide6>=6.6",
    # Misc
    "tqdm>=4.66",
    "rich>=13.7",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]

# Model-specific extras (user installs what they need)
depthcrafter = ["diffusers>=0.30", "accelerate>=0.30"]
normalcrafter = ["diffusers>=0.30", "accelerate>=0.30"]
# Video-Depth-Anything uses a vendored ViT + temporal DPT backbone. The
# model's internal resize path uses OpenCV; einops ships with the
# DINOv2/motion-module blocks; easydict is needed by the temporal head.
# xformers is optional (speed-up only; the attention layers have a
# vanilla PyTorch fallback).
video_depth_anything = [
    "opencv-python-headless>=4.7",
    "einops>=0.4",
    "easydict>=1.10",
    "huggingface_hub>=0.20",
]
# DepthPro ships through transformers (already a core dep), but we leave the
# extra defined so users have a discoverable `pip install live-action-aov[depthpro]`
# entry and future revisions can swap in apple-ml-depth-pro if needed.
depthpro = []
# SAM 3 ships through transformers (already a core dep) via `AutoModel` +
# `trust_remote_code=True`. Extra reserved for future pinning of any extra
# deps (e.g. sam3's own preprocessor package) without a release bump.
sam3 = []
# RVM loads via `torch.hub.load('PeterL1n/RobustVideoMatting', ...)` — torch
# is already core. Extra kept for discoverability.
rvm = []
# DSINE loads via `torch.hub.load('baegwangbin/DSINE', ...)`. Its hubconf
# imports `geffnet` (EfficientNet backbone) — without the extra installed,
# torch.hub raises `Missing dependencies: geffnet` at first load.
dsine = ["geffnet>=1.0"]
matanyone2 = []
# `matte` meta-extra — installs both the detector (sam3) and the default
# commercial-safe refiner (rvm) in one shot.
matte = ["live-action-aov[sam3]", "live-action-aov[rvm]"]
# `all` meta-extra — every optional pass's dependencies. This is what
# install.bat / install.sh default to; without it, users pick a
# non-default backend in the GUI's Passes tab and hit "module not
# found" at submit time. Commercial-safe defaults (DA-V2, DSINE,
# RAFT, sam3+rvm) actually work without it, but a polished install
# that never surprises is worth the extra download bandwidth.
all = [
    "live-action-aov[depthcrafter]",
    "live-action-aov[normalcrafter]",
    "live-action-aov[video_depth_anything]",
    "live-action-aov[depthpro]",
    "live-action-aov[matte]",
    "live-action-aov[matanyone2]",
    "live-action-aov[dsine]",
    "live-action-aov[sam3]",
    "live-action-aov[rvm]",
]

[project.urls]
Homepage = "https://github.com/lettidude/LiveActionAOV"
Documentation = "https://github.com/lettidude/LiveActionAOV/blob/main/docs/user-guide.md"
Repository = "https://github.com/lettidude/LiveActionAOV"
Issues = "https://github.com/lettidude/LiveActionAOV/issues"

[project.scripts]
liveaov = "live_action_aov.cli.app:main"
liveaov-gui = "live_action_aov.gui.app:main"

# -----------------------------------------------------------------------------
# PLUGIN ENTRY POINTS
# -----------------------------------------------------------------------------
# All built-in passes declared here. Third-party plugins declare the same
# groups in their own pyproject.toml. Core has zero hardcoded imports.

[project.entry-points."live_action_aov.passes"]
flow                 = "live_action_aov.passes.flow.raft:RAFTPass"
depth_anything_v2    = "live_action_aov.passes.depth.depth_anything_v2:DepthAnythingV2Pass"
video_depth_anything = "live_action_aov.passes.depth.video_depth_anything:VideoDepthAnythingPass"
depthcrafter         = "live_action_aov.passes.depth.depthcrafter:DepthCrafterPass"
depthpro             = "live_action_aov.passes.depth.depthpro:DepthProPass"
dsine              = "live_action_aov.passes.normals.dsine:DSINEPass"
normalcrafter      = "live_action_aov.passes.normals.normalcrafter:NormalCrafterPass"
sam3_matte         = "live_action_aov.passes.matte.sam3:SAM3MattePass"
rvm_refiner        = "live_action_aov.passes.matte.rvm:RVMRefinerPass"
matanyone2         = "live_action_aov.passes.matte.matanyone2:MatAnyone2RefinerPass"

[project.entry-points."live_action_aov.post"]
temporal_smooth      = "live_action_aov.post.temporal_smooth:TemporalSmoother"
position_from_depth  = "live_action_aov.post.position_from_depth:PositionFromDepth"
ssao                 = "live_action_aov.post.ssao:SSAOPost"

[project.entry-points."live_action_aov.executors"]
local    = "live_action_aov.executors.local:LocalExecutor"
deadline = "live_action_aov.executors.deadline:DeadlineExecutorStub"

[project.entry-points."live_action_aov.io.readers"]
oiio_exr = "live_action_aov.io.readers.oiio_exr:OIIOExrReader"

[project.entry-points."live_action_aov.io.writers"]
exr  = "live_action_aov.io.writers.exr:ExrSidecarWriter"
json = "live_action_aov.io.writers.json:JsonSidecarWriter"

[project.entry-points."live_action_aov.integrations"]
standalone = "live_action_aov.integrations.standalone:StandaloneAdapter"
prism      = "live_action_aov.integrations.prism:PrismAdapterStub"
shotgrid   = "live_action_aov.integrations.shotgrid:ShotGridAdapterStub"
openpype   = "live_action_aov.integrations.openpype:OpenPypeAdapterStub"

# -----------------------------------------------------------------------------
# UV — FORCE CUDA TORCH ON LINUX / WINDOWS
# -----------------------------------------------------------------------------
# The default `pip install torch` on PyPI hands out the CPU-only wheel
# on Windows; uv inherits that default. Every neural pass in this tool
# fails on CPU (fp16 kernels don't exist), so we override the source
# for `torch` + `torchvision` so `uv sync` pulls CUDA wheels
# deterministically — no "worked yesterday, broken today after a
# resync" regressions. macOS falls through to PyPI for MPS support.
#
# We use cu128 (not cu124) because RTX 50-series (Blackwell, sm_120)
# requires torch built against CUDA 12.8+. cu128 wheels work on every
# generation we care about (RTX 20/30/40/50); cu124 would silently
# break Blackwell users — which is exactly what bit us on this dev
# machine (5090) during debugging. Stable cu128 wheels exist from
# torch 2.7 onwards.

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

# -----------------------------------------------------------------------------
# TOOL CONFIGURATIONS
# -----------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/live_action_aov"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# Vendored third-party sources (Bytedance's Video-Depth-Anything, Tencent's
# DepthCrafter, Binyr's NormalCrafter) are fetched verbatim from their
# upstream repos — keeping them clean against our style rules would mean a
# never-ending diff-burn every time we resync. Lint and typecheck our own
# code only.
#
# The Nuke plugin (`plugins/nuke/UtilityRelight/`) is also excluded: it
# runs inside Nuke's bundled Python interpreter, which has its own
# style/typing constraints (no modern type hints, single-line try/except
# is idiomatic for Nuke gizmos, `nuke.tprint` instead of `print`). Linting
# it against ruff's modern-Python rules produces noise that drowns out
# real issues in the core lib.
extend-exclude = [
    "src/live_action_aov/vendored",
    "src/live_action_aov/plugins/nuke",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    # Capital-letter tensor-dim locals and function args (B, H, W, T,
    # N, C, Z, …) are the universal naming convention in our ML / VFX /
    # geometry code.
    "N806", "N803",
    # Class-level `DEFAULT_PARAMS = {...}` gets shallow-copied into each
    # instance; wrapping in ClassVar would mislead readers into thinking
    # it's a shared singleton.
    "RUF012",
    # Bare `except Exception` is deliberate in optional-dep import guards
    # and plugin-loading fall-backs — we want to survive any failure and
    # continue with the rest of the plugin graph.
    "BLE001",
    # Import aliases for ML/VFX libs are universally `np`, `F`, `ocio`,
    # `oiio`; flagging them as style violations is noise.
    "N812", "N813", "N814", "N802",
    # Ambiguous-unicode warnings on em-dashes and multiplication signs
    # in our own prose/comments — deliberate typography.
    "RUF001", "RUF002", "RUF003",
    # Refactor-suggestion categories are personal preference, not bugs.
    "SIM105", "SIM108", "SIM102", "SIM101", "SIM118",
    # Defensive `int(self.params["x"])` casts stay even when the YAML
    # loader already gives int — the cast documents the type contract.
    "RUF046",
    # `_, H, W = shape` is a common ML pattern.
    "RUF059",
    # `dict(a=1)` vs `{"a": 1}` is personal preference.
    "C408",
    # `class Foo(str, Enum)` is valid on Python 3.11; `StrEnum` is also
    # 3.11+ but both are equivalent — keeping existing style.
    "UP042",
    # Optional hook methods on ABCs are intentionally non-abstract.
    "B027",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
]
markers = [
    "gpu: tests that require a GPU (deselect with '-m \"not gpu\"')",
    "slow: tests that take >10s",
    "integration: full-pipeline tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
ignore_missing_imports = true
# Same rationale as ruff's extend-exclude — vendored sources aren't ours,
# and the Nuke plugin lives in Nuke's interpreter (different stdlib).
exclude = [
    '^src/live_action_aov/vendored/',
    '^src/live_action_aov/plugins/nuke/',
]
disable_error_code = [
    # Parameterising every `np.ndarray` with dtype/shape generics is a
    # numpy-typing treadmill we don't want to opt into — it changes by
    # numpy release and pollutes signatures. `np.ndarray` alone is
    # semantically clear in this codebase.
    "type-arg",
    # Third-party ML/diffusers libs don't ship type stubs; calls through
    # them inevitably return / accept Any. Silencing those propagations
    # keeps genuine type errors visible.
    "no-untyped-call",
    "no-any-return",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]
